Download of compressed gedcoms, distances to distinguished people in PDF (impr Djkstra algorithm) (#78)